# agentic-sota-examples

./: .gitignore  Makefile  README.md  RELEASE_NOTES_2026-04.md  mypy.ini  pyproject.toml  requirements.txt  run_project.py
.github/workflows/: benchmark-summary-pr.yml  ci.yml  nightly.yml
app/: __init__.py  api.py
benchmarks/inputs/: 01-eval-driven-agent.json  02-multi-agent-debate-judge.json  03-human-in-the-loop-review.json  04-adaptive-rag-depth.json  05-agent-observability-tracing.json  (+3 more)
console/: package.json
docs/: ARCHITECTURE.md  BENCHMARKING.md  BEST_PRACTICES.md  DATA_SOURCES.md  DEMO_SCRIPT.md  LATEST_BENCHMARK_SUMMARY.md  OVERVIEW.md  PORTFOLIO.md  PRODUCTS.md  RUNBOOK.md
policies/: default.yaml
project_pipelines/: __init__.py  p01_eval_driven_agent.py  p02_debate_judge.py  p03_human_review.py  p04_adaptive_rag.py  p05_observability.py  p06_guardrail_policy.py  p07_self_improver.py  p08_cost_quality_router.py
reports/: 01-eval-driven-agent-REPORT.md  01-eval-driven-agent-summary.json  03-human-in-the-loop-review-review-payload.json  07-self-improving-prompt-policy-tuner-recommendation.json
scripts/: generate_benchmark_summary.py  run_real_benchmarks.py
shared/: __init__.py  data_sources.py  evals.py  guardrails.py  orchestration_contract.md  orchestration_policy.py  runtime.py  telemetry.py
tests/: conftest.py  test_acceptance_criteria.py  test_artifacts.py  test_benchmark_inputs.py  test_contract_schema.py  test_data_sources.py  test_fallback_behavior.py  test_projects_smoke.py
traces/: 01-eval-driven-agent-trace.json
(+34 files in other folders)
