[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-sota-examples"
version = "0.1.1"
description = "State-of-the-art LangGraph examples monorepo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.36,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0,<10.0.0",
  "ruff>=0.12.0,<1.0.0",
  "mypy>=1.17.0,<2.0.0",
]

[tool.setuptools]
packages = ["project_pipelines", "shared"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".cache", ".git", "reports"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
no_implicit_optional = true
exclude = "(.venv|reports|.git|.cache)"
disable_error_code = ["import-untyped", "arg-type", "call-overload", "dict-item", "assignment", "misc"]
